kube/common/pdla-fast/pdla-fast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdla-fast-service
  labels:
    app.kubernetes.io/name: pdla-fast
spec:
  selector:
    app.kubernetes.io/name: pdla-fast
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
