kube/common/pdla-fast/pdla-fast-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdla-fast-ingress
  namespace: chunkmydocs
  labels:
    app: pdla-fast
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pdla-fast-service
            port:
              number: 8000
